--- a/material/js/guess2.html
+++ b/material/js/guess2.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<meta name="viewport" content="width=device-width">
-<html> 
-        <head> 
-                <script> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width">
+        <title>Guessing game</title>
+        <script> 
 var max_value = 5000;
 var min_value = 1;
 var value = Math.floor(Math.random() * max_value) + min_value;
@@ -16,11 +18,11 @@ function guessed() {
     str = "You guessed: " + document.getElementById("guess").value + "<br/>";
     guess = document.getElementById("guess").value;
     if(guess < value) {
-            str += "My number is larger!";
+        str += "My number is larger!";
     } else if(guess > value) {
-            str += "My number is smaller!";
+        str += "My number is smaller!";
     } else {
-            str += "Correct! And it only took you " + number_of_guesses + " guesses!";
+        str += "Correct! And it only took you " + number_of_guesses + " guesses!";
     }
     document.getElementById("paragraph").innerHTML = str
 } 
@@ -36,21 +38,21 @@ function solve() {
         min_value = my_guess + 1;
     }
 }
-                </script> 
-        </head> 
+        </script> 
+    </head> 
 
-        <body> 
-                <p id="intro">
-                </p>
+    <body> 
+        <p id="intro">
+        </p>
 
-                <form> 
-                        <input type="text" id="guess" value=""> <br/>
-                        <input type="button" onclick="guessed()" value="Guess" id="guess_button"> <br/>
-                        <input type="button" onclick="solve()" value="Solve"> 
-                </form> 
+        <form> 
+            <input type="text" id="guess" value=""> <br/>
+            <input type="button" onclick="guessed()" value="Guess" id="guess_button"> <br/>
+            <input type="button" onclick="solve()" value="Solve"> 
+        </form> 
 
-                <p id="paragraph"></p>
+        <p id="paragraph"></p>
 
-        </body> 
+    </body> 
 </html> 
 
