--- a/material/js/js3.html
+++ b/material/js/js3.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en"> 
     <head> 
+        <meta charset="UTF-8">
+        <title>Page</title>
         <script> 
 function myfunc() {
     var value = Math.random() * 20;
