--- a/material/httpserv/sock_index.html
+++ b/material/httpserv/sock_index.html
@@ -1,4 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+    <meta charset="UTF-8">
+    <title>Guessing game</title>
 	<body>
 		<a href="guess2.html">Guessing game</a>
 	</body>
