--- a/material/js/js1.html
+++ b/material/js/js1.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en"> 
+    <head> 
+        <meta charset="UTF-8">
+        <title>Guessing game</title>
+    </head> 
     <body> 
         <p>some text</p>
     </body> 
