--- a/material/js/js2.html
+++ b/material/js/js2.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html> 
+<html lang="en"> 
     <head> 
+        <meta charset="UTF-8">
+        <title>Page</title>
         <script> 
 function myfunc() {
     document.getElementById("paragraph").innerHTML = "new text"
